Secure UUIDs and transactions logic for points (#4)
* Implement transaction Logic 
* Implement points service and its logic against transactions
* Secure UUIDs and transactions logic for points
* Refactoring and cleanup
* Rubocop lint fixes
