# config/routes.rb
@@ -8,7 +8,9 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       get "ping", to: "ping#index"
-      resources :users, param: :user_id
+      resources :users, param: :user_id do
+        resources :transactions, only: [ :create ]
+      end
     end
   end
 
